# cinnabar

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yml
.ci/: lint-and-test.json
.ci/pipelines/: lint.json  lint.jsonnet  test.json  test.jsonnet
.cinnabar/pipelines/: lint.jsonnet  test.jsonnet
assets/: test-pipeline.json
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  lib.rs  main.rs  runner.rs  server.rs  webhook.rs
backend/src/api/: mod.rs  state.rs
backend/src/api/webhook/: checksum.rs  mod.rs
backend/src/domain/: pipeline.rs
backend/src/github/: error.rs  mod.rs
backend/src/orchestrator/: mod.rs
backend/src/parser/: error.rs  json.rs  jsonnet.rs  mod.rs
backend/src/runner/: container.rs  entrypoint.sh  error.rs  mod.rs  volume.rs
backend/src/source_control/: mod.rs
backend/src/webhook/: checksum.rs  mod.rs
domain/: Cargo.toml
domain/migrations/2024-09-17-093755_initial/: up.sql
domain/src/: lib.rs  pipeline.rs  schema.rs
domain/src/models/: docker_image_reference.rs  mod.rs  pipeline.rs  trigger.rs
domain/src/repositories/: mod.rs
domain/src/repositories/pipeline/: implementation.rs  mod.rs
nginx/: Dockerfile
nginx/config/: nginx.conf
nginx/config/conf.d/: default.conf
nginx/config/templates/: app.cinnabar-ci.dev.conf.template  ci.jakobs-lab.at.conf.template  vault.cinnabar-ci.dev.conf.template
nginx/config/upstreams/: backend.upstream.conf  vault.upstream.conf
nginx/cron/: certbot
nginx/scripts/: initialize-certificates.sh  reload-nginx.sh  start-cron.sh
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/domain/: pipeline.rs
shared/src/source_control/: mod.rs
shared/src/source_control/github/: mod.rs
source_control/: Cargo.toml
source_control/src/: lib.rs
source_control/src/github/: error.rs  mod.rs
vault/: Dockerfile  config.hcl
