[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bollard = "0.16.1"
domain = { path = "../domain" }
futures = "0.3.30"
secrecy = "0.8.0"
serde = "1.0.197"
serde_json = "1.0"
source_control = { path = "../source_control" }
thiserror = "1.0.59"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "signal"] }
