[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bollard = "0.16.1"
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
digest = { version = "0.10.7", features = ["mac"] }
domain = { path = "../domain" }
futures = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.8.5"
rsjsonnet-lang = "0.1.1"
secrecy = "0.8.0"
serde = "1.0.197"
serde_json = "1.0.117"
sha2 = "0.10.8"
source_control = { path = "../source_control" }
thiserror = "1.0.59"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "signal"] }
