[package]
name = "domain"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.59"
